--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="header" align="center">
 		<h1>2018 FIFA World Cup RUSSIA</h1>
-		<p>Set or change match scores to see their effects on the table!</p>
+		<p>Play WORLDCUP with US and win GOLD!</p>
 	</div>
 	<div class="container">
 		<!-- Nav tabs -->
@@ -158,95 +158,154 @@
 		<!-- Tab panes -->
 		<div class="tab-content">
 		  <div class="tab-pane container active" id="groupA">
+			<form action="submit.html?" align="center" id="resultSubmit1" method="GET"> 
 		  		<div class="row">
 					<div class="col-md-12">
 						<table class="table table-light">
-						  <caption>Group A</caption>
+						  <caption>Gruppe A</caption>
+						  <tbody>
+					      <thead>
+					      	<tr>
+					      		<td>Uhrzeit</td>
+					      		<td>Team1</td>
+					      		<td>Tipp1</td>
+					      		<td></td>
+					      		<td>Tipp2</td>
+					      		<td>Team2</td>
+					      		<td>Stadion, Ort</td>
+					      	</tr>
+					  	  </thead>						    						    						    
+						  </tbody>
+						</table>
+					</div>
+		  		</div>
+		  		<input type="hidden" name="group" value="grpA">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>
+		  </div>
+		  <div class="tab-pane container fade" id="groupB">
+			<form action="submit.html?" align="center" id="resultSubmit2" method="GET">
+		  		<div class="row">
+					<div class="col-md-12">
+						<table class="table table-light">
+						  <caption>Gruppe B</caption>
+						  <tbody>						  
+						  </tbody>
+						</table>
+					</div>
+		  		</div>
+		  		<input type="hidden" name="group" value="grpB">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>		  	
+		  </div>
+		  <div class="tab-pane container fade" id="groupC">
+			<form action="submit.html?" align="center" id="resultSubmit3" method="GET">
+		  		<div class="row">
+					<div class="col-md-12">
+						<table class="table table-light">
+						  <caption>Gruppe C</caption>
 						  <tbody>						    						    						    
 						  </tbody>
 						</table>
 					</div>
 		  		</div>
-		  </div>
-		  <div class="tab-pane container fade" id="groupB">
-		  		<div class="row">
-					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group B</caption>
-						  <tbody>					    						   		    
-						  </tbody>
-						</table>
-					</div>
-		  		</div>		  	
-		  </div>
-		  <div class="tab-pane container fade" id="groupC">
-		  		<div class="row">
-					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group C</caption>
-						  <tbody>				    						   		    
-						  </tbody>
-						</table>
-					</div>
-		  		</div>			  	
+		  		<input type="hidden" name="group" value="grpC">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>			  	
 		  </div>
 		  <div class="tab-pane container fade" id="groupD">
+			<form action="submit.html?" align="center" id="resultSubmit4" method="GET">
 		  		<div class="row">
 					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group D</caption>
-						  <tbody>				    						   		    
+						<table class="table table-light">
+						  <caption>Gruppe D</caption>
+						  <tbody>						    						    						    
 						  </tbody>
 						</table>
 					</div>
 		  		</div>
+		  		<input type="hidden" name="group" value="grpD">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>
 		  </div>
 		  <div class="tab-pane container fade" id="groupE">
+			<form action="submit.html?" align="center" id="resultSubmit5" method="GET">
 		  		<div class="row">
 					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group E</caption>
-						  <tbody>				    						   		    
+						<table class="table table-light">
+						  <caption>Gruppe E</caption>
+						  <tbody>						    						    						    
 						  </tbody>
 						</table>
 					</div>
 		  		</div>
+		  		<input type="hidden" name="group" value="grpE">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>
 		  </div>
 		  <div class="tab-pane container fade" id="groupF">
+			<form action="submit.html?" align="center" id="resultSubmit6" method="GET">
 		  		<div class="row">
 					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group F</caption>
-						  <tbody>				    						   		    
+						<table class="table table-light">
+						  <caption>Gruppe F</caption>
+						  <tbody>						    						    						    
 						  </tbody>
 						</table>
 					</div>
-		  		</div>		  	
+		  		</div>
+		  		<input type="hidden" name="group" value="grpF">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>	  	
 		  </div>
 		  <div class="tab-pane container fade" id="groupG">
+			<form action="submit.html?" align="center" id="resultSubmit7" method="GET">
 		  		<div class="row">
 					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group G</caption>
-						  <tbody>				    						   		    
+						<table class="table table-light">
+						  <caption>Gruppe G</caption>
+						  <tbody>						    						    						    
 						  </tbody>
 						</table>
 					</div>
-		  		</div>		  	
+		  		</div>
+		  		<input type="hidden" name="group" value="grpG">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>	  	
 		  </div>	
   		  <div class="tab-pane container fade" id="groupH">
+			<form action="submit.html?" align="center" id="resultSubmit8" method="GET">
 		  		<div class="row">
 					<div class="col-md-12">
-						<table class="table">
-						  <caption>Group H</caption>
-						  <tbody>				    						   		    
+						<table class="table table-light">
+						  <caption>Gruppe H</caption>
+						  <tbody>						    						    						    
 						  </tbody>
 						</table>
 					</div>
-		  		</div>  		  	
+		  		</div>
+		  		<input type="hidden" name="group" value="grpH">
+	    		<label for="email">Email address:</label>
+	    		<input type="email" name="email" class="form-control" id="email" required style="width:250px;margin: auto;"><br>
+	    		<button type="submit" class="btn btn-default">Submit</button>
+			</form>  		  	
   		  </div>	
 		</div>
-		<button id="getthevalue" type="button" class="btn btn-primary">Primary</button>	
+
 	</div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script> -->
